增加侧边栏

--- a/RxArchitecture/app/build.gradle
+++ b/RxArchitecture/app/build.gradle
@@ -72,4 +72,6 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxandroid:'+rootProject.rxAndroidVersion
     compile 'com.jakewharton.rxbinding2:rxbinding:'+rootProject.rxbindingVersion
 
+    compile 'com.gyf.barlibrary:barlibrary:2.2.5'
+
 }
