--- a/RxArchitecture/app/src/main/AndroidManifest.xml
+++ b/RxArchitecture/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:name=".app.App"
-        android:theme="@style/AppTheme">
+        android:theme="@style/NoActionBarTheme">
         <activity android:name="com.example.leipe.rx.view.MainSupportActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
