--- a/architecture/build.gradle
+++ b/architecture/build.gradle
@@ -34,4 +34,5 @@ ext {
     espressoVersion = "2.2.2"
     archLifecycleVersion = "1.0.0-alpha1"
     archRoomVersion = "1.0.0-alpha1"
+    glideVersion = "3.7.0"
 }
