--- a/architecture/app/src/main/AndroidManifest.xml
+++ b/architecture/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:name=".app.App"
         android:theme="@style/NoActionBarTheme">
-        <activity android:name=".ui.MainSupportActivity">
+        <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER" />
