--- a/RxArchitecture/app/src/main/AndroidManifest.xml
+++ b/RxArchitecture/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_stat_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".ui.WelcomeActivity">
