--- a/RxArchitecture/app/build.gradle
+++ b/RxArchitecture/app/build.gradle
@@ -26,58 +26,54 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     // view
     compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support:cardview-v7:26.+';
-    compile 'com.android.support:recyclerview-v7:26.+';
-    compile 'com.android.support:design:26.+';
+    compile 'com.android.support:cardview-v7:26.+'
+    compile 'com.android.support:recyclerview-v7:26.+'
+    compile 'com.android.support:design:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:26.+'
     // glide
     compile 'com.github.bumptech.glide:glide:3.8.0'
-
     // 沉浸式状态栏和沉浸式导航栏管理
     compile 'com.gyf.barlibrary:barlibrary:2.3.0'
-
     // lifecycle
-    compile "android.arch.lifecycle:runtime:1.0.0-alpha9-1"
-    compile "android.arch.lifecycle:extensions:1.0.0-alpha9-1"
+    compile 'android.arch.lifecycle:runtime:1.0.0-alpha9-1'
+    compile 'android.arch.lifecycle:extensions:1.0.0-alpha9-1'
     annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha9-1"
-
     // fragmentation
     compile 'me.yokeyword:fragmentation:1.1.6'
-
+    // baseAdapter
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.22'
     // dagger-android
     compile 'com.google.dagger:dagger:2.11'
     compile 'com.google.dagger:dagger-android:2.11'
-    compile 'com.google.dagger:dagger-android-support:2.11' // if you use the support libraries
+    compile 'com.google.dagger:dagger-android-support:2.11'
+    // if you use the support libraries
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.11'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
-
-    // newWork
-    compile "com.squareup.retrofit2:retrofit:2.2.0"
-    compile "com.squareup.retrofit2:converter-gson:2.2.0"
-    compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.8.1'
-    compile 'com.squareup.okhttp3:okhttp:3.8.1'
-
-    // logger
-    compile 'com.orhanobut:logger:2.1.1'
-
     // Butter Knife
     compile 'com.jakewharton:butterknife:8.7.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.7.0'
-
+    // newWork
     // RxJava
-    compile "io.reactivex.rxjava2:rxandroid:2.0.1"
-    compile "io.reactivex.rxjava2:rxjava:2.1.0"
-
-    // baseAdapter
-    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.22'
-
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+    compile 'com.squareup.retrofit2:retrofit:2.2.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.2.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.8.1'
+    compile 'com.squareup.okhttp3:okhttp:3.8.1'
+    // logger
+    compile 'com.orhanobut:logger:2.1.1'
     // banner
     compile 'com.youth.banner:banner:1.4.10'
 
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:2.10.0'
+    testCompile 'com.github.fabioCollini.daggermock:daggermock:0.8.1'
+    androidTestCompile 'com.github.fabioCollini.daggermock:daggermock:0.8.1'
+    testCompile "org.robolectric:robolectric:3.4.2"
+    testCompile "org.robolectric:shadows-support-v4:3.4-rc2"
 }
