--- a/RxArchitecture/app/build.gradle
+++ b/RxArchitecture/app/build.gradle
@@ -73,7 +73,12 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.10.0'
     testCompile 'com.github.fabioCollini.daggermock:daggermock:0.8.1'
-    androidTestCompile 'com.github.fabioCollini.daggermock:daggermock:0.8.1'
     testCompile "org.robolectric:robolectric:3.4.2"
     testCompile "org.robolectric:shadows-support-v4:3.4-rc2"
+    testCompile "com.squareup.okhttp3:mockwebserver:3.8.1"
+    testCompile ("android.arch.core:core-testing:1.0.0-alpha9-1", {
+        exclude group: 'com.android.support', module: 'support-compat'
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.android.support', module: 'support-core-utils'
+    })
 }
