--- a/architecture/app/build.gradle
+++ b/architecture/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
 
 
     // support
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:appcompat-v7:' + rootProject.supportLibVersion;
     compile 'com.android.support:cardview-v7:' + rootProject.supportLibVersion;
     compile 'com.android.support:recyclerview-v7:' + rootProject.supportLibVersion;
