--- a/RxArchitecture/build.gradle
+++ b/RxArchitecture/build.gradle
@@ -5,18 +5,19 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        mavenCentral()
         maven { url "https://maven.google.com" }
         maven { url "https://jitpack.io" }
+        maven { url 'https://dl.bintray.com/yokeyword/maven/' }
+
     }
 }
 
