--- a/RxArchitecture/app/build.gradle
+++ b/RxArchitecture/app/build.gradle
@@ -34,6 +34,10 @@ android {
         androidTest.java.srcDirs += "src/test-common/java"
         test.java.srcDirs += "src/test-common/java"
     }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
@@ -89,9 +93,24 @@ dependencies {
     compile 'me.yokeyword:eventbus-activity-scope:1.0.0'
     compile 'org.greenrobot:eventbus:3.0.0'
 
+    compile 'com.tencent.bugly:crashreport:2.6.5' //其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如2.1.9
+    compile 'com.tencent.bugly:nativecrashreport:3.3.1' //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
+
+//    testCompile 'junit:junit:4.11'
+//    testCompile 'org.mockito:mockito-core:1.9.5'
+//    testCompile 'org.powermock:powermock-module-junit4:1.5.6'
+//    testCompile 'org.powermock:powermock-module-junit4-rule:1.5.6'
+//    testCompile 'org.powermock:powermock-api-mockito:1.5.6'
+
+
     testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:2.10.0'
-    testCompile 'com.github.fabioCollini.daggermock:daggermock:0.8.1'
+
+    testCompile 'org.powermock:powermock-core:1.6.1'
+    testCompile 'org.powermock:powermock-module-junit4:1.6.1'
+    testCompile 'org.powermock:powermock-module-junit4-rule:1.6.1'
+    testCompile 'org.powermock:powermock-api-mockito:1.6.1'
+
+
     testCompile "org.robolectric:robolectric:3.4.2"
     testCompile "org.robolectric:shadows-support-v4:3.4-rc2"
     testCompile "com.squareup.okhttp3:mockwebserver:3.8.1"
@@ -99,8 +118,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-compat'
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'com.android.support', module: 'support-core-utils'
+        exclude group: 'org.mockito', module: 'mockito-core'
     })
 
-    compile 'com.tencent.bugly:crashreport:2.6.5' //其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如2.1.9
-    compile 'com.tencent.bugly:nativecrashreport:3.3.1' //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
 }
