--- a/RxArchitecture/app/build.gradle
+++ b/RxArchitecture/app/build.gradle
@@ -105,10 +105,11 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
 
-    testCompile 'org.powermock:powermock-core:1.6.1'
-    testCompile 'org.powermock:powermock-module-junit4:1.6.1'
-    testCompile 'org.powermock:powermock-module-junit4-rule:1.6.1'
-    testCompile 'org.powermock:powermock-api-mockito:1.6.1'
+    testCompile "org.powermock:powermock-core:1.6.1"
+    testCompile "org.powermock:powermock-module-junit4:1.6.1"
+    testCompile "org.powermock:powermock-module-junit4-rule:1.6.1"
+    testCompile "org.powermock:powermock-api-mockito:1.6.1"
+    testCompile "org.powermock:powermock-classloading-xstream:1.6.1"
 
 
     testCompile "org.robolectric:robolectric:3.4.2"
