--- a/RxArchitecture/app/src/main/AndroidManifest.xml
+++ b/RxArchitecture/app/src/main/AndroidManifest.xml
@@ -37,6 +37,8 @@
         </activity>
         <activity android:name=".MainActivity"/>
         <activity android:name=".ui.gank.GirlDetailActivity" android:theme="@style/SplashTheme"/>
+
+        <receiver android:name=".broadcast.AlarmClockBroadcast"/>
     </application>
 
 </manifest>
