添加天气模块,url随着后台离职失效 gg

--- a/RxArchitecture/app/src/main/AndroidManifest.xml
+++ b/RxArchitecture/app/src/main/AndroidManifest.xml
@@ -69,18 +69,8 @@
         <activity android:name=".ui.activity.AlarmClockActivity"/>
 
         <receiver
-            android:name=".broadcast.AlarmClockBroadcast"
-            android:process=":daemon"/>
-        <receiver android:name=".broadcast.BootBroadcastReceiver">
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"/>
-            </intent-filter>
-        </receiver>
+            android:name=".broadcast.AlarmClockBroadcast"/>
 
-        <service
-            android:name=".service.DaemonService"
-            android:exported="true"
-            android:process=":daemon"/>
     </application>
 
 </manifest>
