--- a/RxArchitecture/app/build.gradle
+++ b/RxArchitecture/app/build.gradle
@@ -42,12 +42,12 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     // view
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support:cardview-v7:26.+'
-    compile 'com.android.support:recyclerview-v7:26.+'
-    compile 'com.android.support:design:26.+'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:cardview-v7:26.1.0'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
+    compile 'com.android.support:design:26.1.0'
+    compile 'com.android.support:support-v4:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:support-v4:26.+'
     // glide
     compile 'com.github.bumptech.glide:glide:3.8.0'
     // 沉浸式状态栏和沉浸式导航栏管理
