--- a/RxArchitecture/build.gradle
+++ b/RxArchitecture/build.gradle
@@ -3,14 +3,15 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath 'com.android.tools.build:gradle:2.3.3'
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
     }
 }
 
-allprojects {
+allprojects{
     repositories {
         jcenter()
         mavenCentral()
