--- a/RxArchitecture/build.gradle
+++ b/RxArchitecture/build.gradle
@@ -2,23 +2,26 @@
 
 buildscript {
     repositories {
+        maven { url "https://maven.google.com" }
+        mavenCentral()
+        maven { url "https://jitpack.io" }
+        maven { url 'https://dl.bintray.com/yokeyword/maven/' }
         jcenter()
-        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
+        classpath 'com.jakewharton:butterknife-gradle-plugin:8.4.0'
     }
 }
 
-allprojects{
+allprojects {
     repositories {
-        jcenter()
-        mavenCentral()
         maven { url "https://maven.google.com" }
+        mavenCentral()
         maven { url "https://jitpack.io" }
         maven { url 'https://dl.bintray.com/yokeyword/maven/' }
-
+        jcenter()
     }
 }
 
