--- a/RxArchitecture/gradle.properties
+++ b/RxArchitecture/gradle.properties
@@ -19,3 +19,4 @@ org.gradle.jvmargs=-Xmx1536m
 systemProp.https.proxyHost=127.0.0.1
 systemProp.http.proxyPort=1080
 android.useDeprecatedNdk=true
+isModule=false
