--- a/RxArchitecture/model_zhihu/src/main/module/AndroidManifest.xml
+++ b/RxArchitecture/model_zhihu/src/main/module/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:theme="@style/ZhiHu_AppTheme"
+        android:theme="@style/Base_AppTheme"
         android:supportsRtl="true"
         android:name="debug.ZhiHuApplication"
         >
