--- a/RxArchitecture/model_gank/build.gradle
+++ b/RxArchitecture/model_gank/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':baselib')
 
+    compile 'com.github.Commit451:NativeStackBlur:1.0.5'
+
     // ARouter
     compile Libs.arouter_api
     compile Libs.arouter_annotation
