--- a/RxArchitecture/app/build.gradle
+++ b/RxArchitecture/app/build.gradle
@@ -1,10 +1,8 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.alibaba.arouter'
-apply plugin: 'org.greenrobot.greendao'
 
 android {
     compileSdkVersion Versions.compileSdkVersion
-    buildToolsVersion Versions.buildToolsVersion
+    buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId Versions.applicationId
         minSdkVersion Versions.minSdkVersion
@@ -41,12 +39,12 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile project(':baselib')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation project(':baselib')
     if (!isModule.toBoolean()) {
-        compile project(':model_zhihu')
-        compile project(':model_gank')
-        compile project(':model_journalism')
+        implementation project(':model_zhihu')
+        implementation project(':model_gank')
+        implementation project(':model_journalism')
     }
 
 }
