--- a/RxArchitecture/build.gradle
+++ b/RxArchitecture/build.gradle
@@ -2,14 +2,14 @@
 apply plugin: 'com.alibaba.arouter'
 buildscript {
     repositories {
-        maven { url "https://maven.google.com" }
-        mavenCentral()
+        google()
+        jcenter()
         maven { url "https://jitpack.io" }
         maven { url 'https://dl.bintray.com/yokeyword/maven/' }
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.2.1'
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
         classpath 'com.jakewharton:butterknife-gradle-plugin:8.4.0'
         classpath "com.alibaba:arouter-register:1.0.2"
@@ -18,11 +18,11 @@ buildscript {
 
 allprojects {
     repositories {
-        maven { url "https://maven.google.com" }
-        mavenCentral()
+        google()
+        jcenter()
         maven { url "https://jitpack.io" }
         maven { url 'https://dl.bintray.com/yokeyword/maven/' }
-        jcenter()
+        mavenCentral()
     }
 }
 
