--- a/RxArchitecture/model_gank/build.gradle
+++ b/RxArchitecture/model_gank/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'com.alibaba.arouter'
 
 android {
     compileSdkVersion Versions.compileSdkVersion
-    buildToolsVersion Versions.buildToolsVersion
+    buildToolsVersion '28.0.3'
 
 
     defaultConfig {
@@ -49,13 +49,13 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':baselib')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(':baselib')
 
-    compile 'com.github.Commit451:NativeStackBlur:1.0.5'
+    implementation 'com.github.Commit451:NativeStackBlur:1.0.5'
 
     // ARouter
-    compile Libs.arouter_api
-    compile Libs.arouter_annotation
+    implementation Libs.arouter_api
+    implementation Libs.arouter_annotation
     annotationProcessor Libs.arouter_compiler
 }
