--- a/RxArchitecture/model_journalism/build.gradle
+++ b/RxArchitecture/model_journalism/build.gradle
@@ -49,11 +49,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':baselib')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(':baselib')
 
     // ARouter
-    compile Libs.arouter_api
-    compile Libs.arouter_annotation
+    implementation Libs.arouter_api
+    implementation Libs.arouter_annotation
     annotationProcessor Libs.arouter_compiler
 }
