--- a/RxArchitecture/model_zhihu/build.gradle
+++ b/RxArchitecture/model_zhihu/build.gradle
@@ -48,12 +48,12 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':baselib')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(':baselib')
 
     // ARouter
-    compile Libs.arouter_api
-    compile Libs.arouter_annotation
+    implementation Libs.arouter_api
+    implementation Libs.arouter_annotation
     annotationProcessor Libs.arouter_compiler
 
 }
